--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,27 +10,33 @@ macro(generate_hex TARGET)
 	endif()
 endmacro()
 
-if(SERIES)
-	# generate UsbDeviceTest for every board
-	foreach(BOARD ${coco-devboards_COMPONENT_NAMES})
-		string(REGEX REPLACE ".*\\:" "FlashTest-" NAME ${BOARD})
+# iterate over boards and generate tests
+foreach(COMPONENT ${coco-devboards_COMPONENT_NAMES})
+	string(REGEX REPLACE ".*\\:" "" BOARD ${COMPONENT})
+	message("*** Boad: ${BOARD}")
+	
+	# check if board specific header exists
+	if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}/FlashTest.hpp)
+		set(NAME "FlashTest-${BOARD}")
+
 		add_executable(${NAME}
 			FlashTest.cpp
 		)
 		target_include_directories(${NAME}
 			PRIVATE
 				../
+				${BOARD}
 		)
 
 		# find link.ld of board
-		get_target_property(INCLUDES ${BOARD} INTERFACE_INCLUDE_DIRECTORIES)
+		get_target_property(INCLUDES ${COMPONENT} INTERFACE_INCLUDE_DIRECTORIES)
 		target_link_directories(${NAME}
 			PRIVATE	
 				${INCLUDES}
 		)
 
 		target_link_libraries(${NAME}
-			${BOARD}
+			${COMPONENT}
 			coco::coco
 			coco-loop::coco-loop
 			${PROJECT_NAME}
@@ -43,5 +49,5 @@ if(SERIES)
 
 		# generate hex file for flashing the target
 		generate_hex(${NAME})
-	endforeach()
-endif()
+	endif()
+endforeach()
