--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,53 +1,40 @@
-# hex generator
-separate_arguments(GENERATE_HEX)
-macro(generate_hex TARGET)
-	if(NOT "${GENERATE_HEX}" STREQUAL "" AND NOT "${GENERATE_HEX}" STREQUAL "None")
-		#message("*** Generate Hex for ${TARGET}: ${GENERATE_HEX}")
-		add_custom_command(TARGET ${TARGET}
-			POST_BUILD
-			COMMAND ${GENERATE_HEX} ${TARGET} ${TARGET}.hex
-		)
-	endif()
-endmacro()
-
-# iterate over boards and generate tests
-foreach(COMPONENT ${coco-devboards_COMPONENT_NAMES})
-	string(REGEX REPLACE ".*\\:" "" BOARD ${COMPONENT})
-	message("*** Boad: ${BOARD}")
-
-	# check if board specific header exists
-	if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}/FlashTest.hpp)
-		set(NAME "FlashTest-${BOARD}")
+function(board_test TEST TARGET)
+	#message("*** Target: ${TARGET}")
+	# check if target exists
+	if(TARGET ${TARGET})
+		string(REGEX REPLACE ".*\\:" "" BOARD ${TARGET})
+		set(NAME "${TEST}-${BOARD}")
+		message("*** Board: ${BOARD}")
 
 		add_executable(${NAME}
-			FlashTest.cpp
+			${TEST}.cpp
 		)
 		target_include_directories(${NAME}
 			PRIVATE
 				../
 				${BOARD}
 		)
-
-		# find link.ld of board
-		get_target_property(INCLUDES ${COMPONENT} INTERFACE_INCLUDE_DIRECTORIES)
-		target_link_directories(${NAME}
-			PRIVATE
-				${INCLUDES}
-		)
-
 		target_link_libraries(${NAME}
-			${COMPONENT}
-			coco::coco
+			${TARGET}
 			coco-loop::coco-loop
 			${PROJECT_NAME}
 		)
 
-		# windows specific libraries
-		if(WIN32)
-			target_link_libraries(${NAME} wsock32 ws2_32 winmm)
-		endif()
-
 		# generate hex file for flashing the target
-		generate_hex(${NAME})
+		if(${CMAKE_CROSSCOMPILING})
+			#message("*** Generate Hex for ${NAME} using ${CMAKE_OBJCOPY}")
+			add_custom_command(TARGET ${NAME}
+				POST_BUILD
+				COMMAND ${CMAKE_OBJCOPY} -O ihex ${NAME} ${NAME}.hex
+			)
+		endif()
 	endif()
-endforeach()
+endfunction()
+
+#message("*** coco-devboards: ${coco-devboards_COMPONENT_NAMES}")
+
+board_test(FlashTest coco-devboards::native)
+board_test(FlashTest coco-devboards::nrf52dongle)
+board_test(FlashTest coco-devboards::stm32f0discovery)
+board_test(FlashTest coco-devboards::stm32f3348discovery)
+board_test(FlashTest coco-devboards::stm32g431nucleo)
