Add dual bank mode for SMT32G4

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -37,3 +37,4 @@ board_test(FlashTest coco-devboards::nrf52dongle)
 board_test(FlashTest coco-devboards::stm32f0discovery)
 board_test(FlashTest coco-devboards::stm32f3348discovery)
 board_test(FlashTest coco-devboards::stm32g431nucleo)
+board_test(FlashTest coco-devboards::stm32g474nucleo)
